--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <script src="./back-end/index.js" defer></script>
+    <link href="style/style.css" rel="stylesheet">
+    <script src="../index.mjs" type="module" defer></script>
+    <script src="js/controller.mjs" type="module" defer></script>
+    <script src="js/router.mjs" type="module" defer></script>
+    <script src="js/service.mjs" type="module" defer></script>
+    <script src="js/post.mjs" type="module" defer></script>
 </head>
 <body style="background:aliceblue">
 <form>
@@ -26,5 +30,6 @@
     </div>
     <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
+
 </body>
 </html>
