--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="style/style.css" rel="stylesheet">
-    <script src="../index.mjs" type="module" defer></script>
+    <script type="module" src="../main.mjs" defer></script>
     <script src="js/controller.mjs" type="module" defer></script>
     <script src="js/router.mjs" type="module" defer></script>
     <script src="js/service.mjs" type="module" defer></script>
