--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="style/style.css" rel="stylesheet">
-    <script type="module" src="../main.mjs" defer></script>
-    <script src="js/controller.mjs" type="module" defer></script>
-    <script src="js/router.mjs" type="module" defer></script>
-    <script src="js/service.mjs" type="module" defer></script>
-    <script src="js/post.mjs" type="module" defer></script>
+    <script type="module"  src="main.js" defer></script>
+    <script src="js/controller.js" type="module" defer></script>
+    <script src="js/router.js" type="module" defer></script>
+    <script src="js/service.js" type="module" defer></script>
+    <script src="js/post.js" type="module" defer></script>
 </head>
 <body style="background:aliceblue">
 <form>
